* subversion/po/nb.po: Add missing \n to a message.

--- a/subversion/po/nb.po
+++ b/subversion/po/nb.po
@@ -60,7 +60,7 @@ msgstr ""
 "Project-Id-Version: subversion 1.1.0\n"
 "Report-Msgid-Bugs-To: dev@subversion.tigris.org\n"
 "POT-Creation-Date: 2006-08-13 20:49+0200\n"
-"PO-Revision-Date: 2006-08-13 20:54+0200\n"
+"PO-Revision-Date: 2006-08-13 22:00+0200\n"
 "Last-Translator: Subversion Developers <dev@subversion.tigris.org>\n"
 "Language-Team: Norwegian <dev@subversion.tigris.org>\n"
 "MIME-Version: 1.0\n"
@@ -5732,8 +5732,8 @@ msgid ""
 "                                   Ignore changes in EOL style"
 msgstr ""
 "Standardverdi: «-u». Når Subversion kjører et ekstern diff-program,\n"
-"                             kjøres dette programmet med parametrene "
-"ARG.                             Men når Subversion bruker den interne "
+"                             kjøres dette programmet med parametrene ARG.\n"
+"                             Men når Subversion bruker den interne "
 "diff-\n"
 "                             implementasjonen, eller når Subversion viser\n"
 "                             «blame»-informasjon, kan ARG være følgende:\n"
