--- a/subversion/po/nb.po
+++ b/subversion/po/nb.po
@@ -5688,8 +5688,8 @@ msgid ""
 "                                   Ignore changes in EOL style"
 msgstr ""
 "Standardverdi: «-u». Når Subversion kjører et ekstern diff-program,\n"
-"                             kjøres dette programmet med parametrene "
-"ARG.                             Men når Subversion bruker den interne "
+"                             kjøres dette programmet med parametrene ARG.\n"
+"                             Men når Subversion bruker den interne "
 "diff-\n"
 "                             implementasjonen, eller når Subversion viser\n"
 "                             «blame»-informasjon, kan ARG være følgende:\n"
